swagger doc to delete fix
